feat: refactor búsqueda de productos en Elasticsearch para soportar filtros opcionales y mejorar la legibilidad del código